k8s/app/app_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: myapp
    name: myapp
spec:
    replicas: 2
    selector:
        matchLabels:
            app: myapp
    template:
        metadata:
            labels:
                app: myapp
        spec:
            containers:
              - image: ghcr.io/lek-x/app:29
                imagePullPolicy: Always
                name: myapp
                resources:
                  limits:
                    memory: 600Mi
                  requests:
                    cpu: 100m
                    memory: 200Mi
                ports:
                  - containerPort: 5000
                    name: myapp
            imagePullSecrets:
              - name: githreg
