k8s/app/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: myapp-svc
spec:
  ports:
    - port: 5000
      #targetPort: 5000
      #protocol: TCP
  selector:
      app: myapp
  #type: LoadBalancer
