k8s/app/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: myapp-svc
      port:
        number: 5000
  rules:
    - host: myapp-svc
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: myapp-svc
                port:
                  number: 5000
#          - path: /kibana
#            pathType: Prefix
#            backend:
#              service:
#                name: kibana-np
#                port:
#                  number: 5601
#
